@@ -7,6 +7,7 @@
 - ansicat: added support for <video> HTML-element
 - ansicat: if chafa fails to load an image, fallback to timg is available
 - offpunk: add list autocompletion to "tour"
+- offpunk: removed "blackbox", which has not been used nor maintained
 
 ## 2.1 - December 15th 2023
 - freshly updated gemtext/rss links are highlighted ("new_link" theme option)
